--- a/wrr/trips.html
+++ b/wrr/trips.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore our exciting white water rafting trips. Choose the perfect adventure for your group!">
     <title>Rafting Adventures - Trips</title>
-    <link rel="stylesheet" href="rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
