modified:   wrr/index.html

--- a/wrr/index.html
+++ b/wrr/index.html
@@ -29,17 +29,16 @@
         <a href="trips.html" class="cta-button">Explore Our Trips</a>
     </section>
 
-    <!-- Grid Layout with Content -->
-    <section class="content-grid">
+    <div class="content-grid">
         <div>
-            <img src="images/adventure.jpg" alt="Adventure Experience">
-            <p>Experience the thrill of rafting through breathtaking rivers with our expert guides.</p>
+            <img src="images/rafting1.jpg" alt="Rafting through rapids">
+            <p>Experience thrilling rapids with our expert guides.</p>
         </div>
         <div>
-            <img src="images/family.jpg" alt="Family Fun">
-            <p>We offer family-friendly trips perfect for making lasting memories.</p>
+            <img src="images/rafting2.jpg" alt="Calm water rafting">
+            <p>Enjoy a peaceful float along scenic rivers.</p>
         </div>
-    </section>
+    </div>
 
     <!-- Newsletter Signup Form -->
     <section class="newsletter">
